...
            <objects>
                <navigationController id="1B5-WM-Q4h" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Favoritos" image="Favoritos" id="fcz-LZ-MYr">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="image" keyPath="selectedImage" value="FavoritosFilled"/>
...
                                                        </constraint>
                                                    </constraints>
                                                    <state key="normal" image="Cesta">
                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                    </state>
...
                    </tabBarItem>
                    <navigationItem key="navigationItem" title="Cesta" id="CX6-UV-azt">
                        <barButtonItem key="backBarButtonItem" title="Voltar" id="QT6-eZ-tc1"/>
                        <barButtonItem key="rightBarButtonItem" title="Prosseguir" style="plain" id="3Mm-Oa-z8V">
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
...
                    </view>
                    <navigationItem key="navigationItem" title="Cesta" id="Vwx-pf-3u8">
                        <barButtonItem key="rightBarButtonItem" title="Finalizar" id="1r7-5s-GBJ">
                            <connections>
                                <action selector="proceedAction:" destination="98n-vO-LOL" id="F2N-mP-eK8"/>
...
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <navigationItem key="navigationItem" title="Finalizando Pedido" id="imI-jI-TMz">
                        <barButtonItem key="rightBarButtonItem" title="Enviar" id="KUG-1o-BC1">
                            <connections>
                                <action selector="validateOrder:" destination="3Gh-Bm-AWM" id="VuL-KZ-QJg"/>
...
                    </view>
                    <navigationItem key="navigationItem" id="vNQ-Ml-1gD">
                        <barButtonItem key="backBarButtonItem" title="Inicio" id="5EM-GK-1hq"/>
                    </navigationItem>
                    <connections>
...
                                                    <constraint firstAttribute="width" constant="30" id="rZK-MJ-Y4i"/>
                                                </constraints>
                                                <state key="normal" image="stepperAdd"/>
                                                <variation key="default">
                                                    <mask key="constraints">
...
                                                    </constraint>
                                                </constraints>
                                                <state key="normal" backgroundImage="star">
                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
...
                                        <color key="backgroundColor" red="0.80392156859999997" green="0.41176470590000003" blue="0.023529411760000001" alpha="1" colorSpace="calibratedRGB"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                        <state key="normal" title="Adicionar na cesta">
                                            <color key="titleColor" red="0.93333333330000001" green="0.92549019610000005" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
...
                                </variation>
                            </imageView>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Usuário" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Uej-uA-j66">
                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
                                <constraints>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Senha" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xci-5r-imM">
                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
                                <constraints>
...
                        </variation>
                    </view>
                    <tabBarItem key="tabBarItem" title="Cardapio" image="Cardapio" id="ABz-fm-O9E">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="image" keyPath="selectedImage" value="CardapioFilled"/>
...
