...
    /* General stuff */
    private var popup = PopupAlertView()
    private let progressMsg = "...Validando Pedido"
    private var formModal: Bool = false
    private var progressBar: UIActivityIndicatorView?
    private var addressOptions: [String: Int] = Dictionary()
    private var payOptions = [ "Cartão de Crédito", "Cheque", "Dinheiro" ]
    
    override func viewDidLoad() {
        super.viewDidLoad()
        do {
            try api.getUserAddresses().forEach { (address) -> () in
                addressOptions[address.address!] = Int(address.id!)
...
        PushRow<String>.defaultOnCellHighlight = { cell,
            row in self.animatedCellAlert(row.baseCell) }

        form
            +++ Section("Forma de pagamento")
            <<< ActionSheetRow<String>() {
                $0.selectorTitle = "Qual a forma de pagamento?"
                for opt in payOptions {
                    $0.options.append(opt)
                }
                $0.tag = "payoption"
                }.onChange { row in self.defaultOnChangeCells(row) }
            
...
                        return fmt1.stringFromDate(NSDate())
                    }
                    return fmt1.stringFromDate(date)
                }
                }.onChange { row in self.defaultOnChangeCells(row) }
            
            +++ Section("Escolha o horário desejado")
            <<< ActionSheetRow<String>() {
                $0.title = "Informe o horário"
                $0.selectorTitle = "Escolha o horário desejado"
                $0.tag = "time"
                $0.cellUpdate({ (cell, row) in
                    if let selectedDate = self.form.rowByTag("date")?.baseValue as? NSDate {
                        let newOptions = self.retrieveDeliveryIntervalsOptions(selectedDate)
                        // reset selected option
...
                })
                $0.options = retrieveDeliveryIntervalsOptions()
                }.onChange { row in self.defaultOnChangeCells(row) }
            
            +++ Section("Escolha endereço")
            <<< ActionSheetRow<String>() {
                $0.selectorTitle = "Qual endereço você quer utilizar?"
                for (address, _) in addressOptions {
                    $0.options.append(address)
                }
                $0.tag = "address"
                }.onChange { row in self.defaultOnChangeCells(row) }

...
