...
    case CarTableContentChanged = "CarTableContentChanged"
}

/* Popup Alert preset messages */
struct PopupMessages {
    /* No internet conection */
    static let NoInternet = (Title: "Atenção", Message: "Nenhuma conexão com a internet detectada. Ative seus dados ou conecte-se a uma rede Wi-Fi.", Button: "Ok")
    /* Order messages */
    static let OrderValid = (Title: "Atenção", Message: "Pedido enviado com sucesso!", Button: "Ok")
    static let OrderDiscountValid = (Title: "Atenção", Message: "Desconto foi validado!", Button: "Ok")
    static let OrderDiscountInValid = (Title: "Atenção", Message: "Não foi possível validar o cupom!", Button: "Ok")
    static let OrderInvalidTimeWindow = (Title: "Atenção", Message: "Você acabou de realizar o pedido. Aguarde 2 horas para efetuar um novo.", Button: "Ok")
    static let OrderInvalidTime = (Title: "Atenção", Message: "Você só pode efetuar pedidos até as 16:00pm para o dia selecionado.", Button: "Ok")
...
