...
func createToolBarWithDoneButton(vc: UIViewController, inout toolBarHeight: CGFloat) -> UIToolbar {
    let doneToolbar: UIToolbar = UIToolbar(frame: CGRectMake(0, 0, 0, 0))
    doneToolbar.backgroundColor = UIColor.whiteColor()
    
    let spaceBt = UIBarButtonItem(barButtonSystemItem:
        UIBarButtonSystemItem.FlexibleSpace, target: nil, action: nil)
    let doneBt = UIBarButtonItem(title: "OK", style: UIBarButtonItemStyle.Done,
        target: vc, action: Selector("doneButtonAction:"))
    
    let items = NSMutableArray()
    items.addObject(spaceBt)
    items.addObject(doneBt)
    
...
